<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_address_hint">Enter email address</string>
    <string name="password_hint">Enter password</string>
    <string name="password_label_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Signup</string>
    <string name="email_label_text">Email</string>
    <string name="welcome_banner_text">Shoe Store Inventory</string>
    <string name="welcome_text">Hello there, welcome to the shoe store inventory app.
        \nFor instructions on how to use the app, please click instructions in the options menu.
    </string>
    <string name="instructions_banner_text">Instructions</string>
    <string name="instructions_body_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        \nSed non risus. Suspendisse lectus tortor, dignissim
        \nsit amet,adipiscing nec, ultricies sed, dolor."
    </string>
    <string name="instructions_menu_text">Instructions</string>
    <string name="shoes_menu_text">Shoes</string>
    <string name="title_welcome_shoe_store">Welcome</string>
    <string name="title_login_shoe_store" />
    <string name="title_instructions_shoe_store">Instructions</string>
    <string name="title_shoes_list_shoe_store">Shoes</string>
    <string name="get_started">Let\'s get started</string>
    <string name="done">Done</string>
    <string name="shoe_name_hint">Shoe name</string>
    <string name="shoe_name_field_cd">Shoe name field</string>
    <string name="shoe_company_hint">Company</string>
    <string name="shoe_size_hint">Size</string>
    <string name="shoe_description_hint">Description</string>
    <string name="add_shoe_cd">Add shoe</string>
    <string name="title_shoe_detail_shoe_store">Shoe Detail</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="unsaved_alert_title">Unsaved Shoe</string>
    <string name="unsaved_alert_message">You have unsaved changes. Are you sure you want to continue without saving?</string>
    <string name="unsaved_alert_positive_button_text">Continue</string>
    <string name="unsaved_alert_negative_button_text">Cancel</string>
    <string name="scroll_view_cd">Scrollable list of shoes</string>
</resources>
