<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation.xml"
    app:startDestination="@id/login_fragment">
    <fragment
        android:id="@+id/login_fragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/title_login_shoe_store"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcome_fragment" />
    </fragment>
    <fragment
        android:id="@+id/welcome_fragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/title_welcome_shoe_store"
        tools:layout="@layout/fragment_welcome" />
    <fragment
        android:id="@+id/instructions_fragment"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/title_instructions_shoe_store"
        tools:layout="@layout/fragment_instructions" />
    <fragment
        android:id="@+id/shoes_fragment"
        android:name="com.udacity.shoestore.screens.shoes.ShoesFragment"
        android:label="ShoesFragment"
        tools:layout="@layout/fragment_shoes" />
</navigation>